@@ -1,0 +1,7 @@
+<?xml version="1.0" encoding="utf-8" ?>
+<CIM CIMVERSION="2.0" DTDVERSION="2.0">
+<MESSAGE ID="4711" PROTOCOLVERSION="1.0">
+<IMETHODRESPONSE NAME="EnumerateClasses">
+<CLASS NAME="CIM_ManagedElement">
+<PROPERTY NAME="Caption" TYPE="string">
+</CIM>
