@@ -19,6 +19,7 @@ Bugs fixed:
 - 2859885 New XML Test Case, removed genericlist.c
 - 3005429 indCIMXMLHandler provider should cleanup nicely
 - 3042731 git master doesn't build with --enable-ssl
+- 3043324 xml tests don't test xml comments
 
 Changes in 1.3.9
 ================
