@@ -1,3 +1,8 @@
+2010-08-11 Sean Swehla <smswehla@linux.vnet.ibm.com>
+
+	*  xmltests/ec_comment.xml, xmltests/ec_comment.lines:
+	[ 3043324 ] xml tests don't test xml comments
+
 2010-08-09 Sean Swehla <smswehla@linux.vnet.ibm.com>
 	*  httpAdapter.c:
 	[ 3042731 ] git master doesn't build with --enable-ssl
